# smart_vend

./: .env.example  .gitignore  CLAUDE.md  EQUIPMENT_OVERHAUL_PLAN.md  README.md  RENDER_DEPLOYMENT_PLAN.md  RENDER_SETUP.md  alembic.ini  check_db.py  pyproject.toml  render.yaml  requirements.txt  smart_vend.db-shm  smart_vend.db-wal  start_local.bat  start_public.bat
.claude/: settings.json
alembic/: env.py
alembic/versions/: 10f8a8a74f0c_add_task_dependencies.py  57a3fd95c05c_add_agent_jobs.py  71c7a2dcf004_add_cs_tables.py  a1b2c3d4e5f6_add_crm_tables.py  b7c1d2e3f4a5_add_product_sources.py  c4d8e2f1a9b3_add_task_sort_order.py  d5e9f1a2b7c4_add_email_classification_columns.py  e8d2c4b6a1f9_add_proforma_processing_fields.py  eb6f333d9da8_initial_schema.py  f1a2b3c4d5e6_add_equipment_sourcing.py  g2h3i4j5k6l7_supplier_account_status.py
app/: config.py  database.py  main.py  views.py
app/models/: __init__.py  agent.py  chat.py  crm.py  cs_governance.py  email_approval.py  equipment.py  financial.py  inventory.py  location.py  research.py  sales.py  settings.py
app/routers/: auth.py  chatbot.py  crm.py  leads.py  (+11 more)
scripts/: backup_db_to_drive.py  create_db.py  curate_equipment.py  fetch_equipment_images.py  fix_quotes.py  init_db.py  migrate_equipment_image_url.py  migrate_lead_gen_v2.py  migrate_sqlite_to_postgres.py  seed_distributors.py  seed_equipment.py  seed_governance_rules.py  seed_research_tasks.py  seed_starter_products.py  seed_suppliers.py
tests/: conftest.py  test_customer_service.py  test_equipment.py  test_financial.py  test_inventory.py  test_inventory_bulk_source.py  test_locations.py  test_price_fetcher_normalize.py  test_research.py  test_sales.py  test_sheets_service.py
(+119 files in other folders)
