[project]
name = "smart-vend"
version = "0.1.0"
description = "Prime Vending internal management platform"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit (security)
    "T20",  # no print statements
]
ignore = [
    "S101",     # Use of assert — needed in tests
    "B008",     # FastAPI Depends() in default args is the correct pattern
    "ANN202",   # Return type for private helpers inferred from context
    "ANN401",   # Any is valid for lazily-imported third-party return types
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S", "T20"]
"scripts/*" = ["T20"]
"alembic/*" = ["ANN", "UP", "F401", "I001", "W291"]
"app/services/price_fetcher/*" = ["S110", "E501"]  # scrapers have intentional except-pass fallbacks
"app/services/price_comparator.py" = ["S110", "E501"]
"app/routers/inventory.py" = ["S110", "E501"]  # JSON parse fallbacks match existing router pattern

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::ResourceWarning",
]
